# kaos-names

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  ci.yml  compat.yml  min-deps.yml  quality.yml  release.yml  security-full.yml  security-light.yml  security.yml  test.yml
docs/standards/: code-quality-standards.md  engineering-process.md  python-design-and-architecture.md  tests-fixtures-ci.md
kaos_names/: __init__.py  __main__.py  cli.py  names.py
tests/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_contract_drift_pins.py  test_names.py
