[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kaos-names"
dynamic = ["version"]
description = "Legal-flavored friendly name generator for KAOS sessions and agents"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "273 Ventures LLC", email = "it@273ventures.com" },
]
maintainers = [
  { name = "Michael Bommarito", email = "mike@273ventures.com" },
]
keywords = [
  "agentic",
  "codename",
  "legal-tech",
  "name-generator",
  "session-names",
  "kaos",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.scripts]
kaos-names = "kaos_names.cli:main"

[project.urls]
Homepage = "https://kelvin.legal"
Documentation = "https://docs.kelvin.legal"
Repository = "https://github.com/273v/kaos-names"
Issues = "https://github.com/273v/kaos-names/issues"
Changelog = "https://github.com/273v/kaos-names/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
  "ty>=0.0.34,<0.1",
]

[tool.hatch.version]
path = "kaos_names/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/kaos_names",
  "/tests/unit",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/NOTICE",
  "/SECURITY.md",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["kaos_names"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=kaos_names",
  "--cov-branch",
  "--cov-report=term-missing",
]
markers = [
  "integration: end-to-end behavior checks",
  "live: tests requiring live external services",
  "network: tests requiring network access",
  "slow: tests that take longer than normal unit checks",
  "unit: focused unit checks",
]

[tool.coverage.run]
source = ["kaos_names"]
branch = true
omit = [
  "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["kaos_names"]

[tool.ty.src]
include = ["kaos_names", "tests"]

[tool.uv]
package = true
exclude-newer = "72 hours"
[tool.uv.exclude-newer-package]
"kaos-citations" = false
"kaos-content" = false
"kaos-core" = false
"kaos-graph" = false
"kaos-llm-client" = false
"kaos-llm-core" = false
"kaos-mcp" = false
"kaos-ml-core" = false
"kaos-names" = false
"kaos-nlp-core" = false
"kaos-nlp-transformers" = false
"kaos-office" = false
"kaos-pdf" = false
"kaos-source" = false
"kaos-tabular" = false
"kaos-web" = false
